<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DataBank</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="logintitle">登录</string>
    <string name="user">用户名</string>
    <string name="phonenumber">手机号码</string>
    <string name="password">密     码</string>
    <string name="username">请在此输入手机号</string>
    <string name="passwordinput">请在此处输入密码</string>
    <string name="format">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string name="login">登 录</string>
    <string name="register"><u>手机注册</u></string>
    <string name="forgetPassword"><u>忘记密码</u></string>
    <string name="registertitle">注册</string>
    <string name="loginpassword">登录密码</string>
    <string name="passwordagain">重输密码</string>
    <string name="ToIPassword">个人中心密码</string>
    <string name="userhint">请在下面方框处输入你的手机号</string>
    <string name="sentHint">请点击发送按钮，您的密码将会通过短信的方式发送到你的手机</string>
    <string name="sent">发送</string>
    <string name="forgetpasswordtitle">寻回密码</string>
    <string name="menu">主菜单</string>
    <string name="info">信息录入</string>
    <string name="msg">消息</string>
    <string name="mine">个人中心</string>
    <string name="view_info">查看信息</string>
    <string name="change_info">更改信息</string>
    <string name="invitation">邀请好友</string>
    <string name="logout">注销登陆</string>
    <string name="msgtitle">消息</string>
    <string name="infotitle">信息录入</string>
    <string name="baseinfo">基本信息录入</string>
    <string name="travelinfo">出行信息录入</string>
    <string name="healthinfo">健康信息录入</string>
    <string name="consumeinfo">消费信息录入</string>
    <string name="dealinfo">交易详情</string>
    <string name="myprofitinfo">我的收益</string>
    <string name="infoinput">录入信息</string>
</resources>
