<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#3cb371" >

    <Button
        android:id="@+id/btn_baseinfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingBottom="10dp"
        android:text="@string/baseinfo" />

    <Button
        android:id="@+id/btn_travelinfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingBottom="10dp"
        android:text="@string/travelinfo" />

    <Button
        android:id="@+id/btn_healthinfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingBottom="10dp"
        android:text="@string/healthinfo" />

    <Button
        android:id="@+id/btn_consumeinfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingBottom="10dp"
        android:text="@string/consumeinfo" />

</LinearLayout>
