<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/all1_bg"
    android:fitsSystemWindows="true"
    android:clipToPadding="true"
    android:focusable="true"  
    android:focusableInTouchMode="true" >

    <RelativeLayout 
       android:layout_height="40dp"
       android:layout_width="match_parent"
       >
       <TextView
           android:id="@+id/registertitle"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_centerHorizontal="true"
           android:layout_centerVertical="true"
           android:text="@string/forgetpasswordtitle"
           android:textSize="28sp"
           android:textColor="#ffffff" />    
       </RelativeLayout>
    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:layout_margin="10dp"
        android:text="@string/userhint" />
    <EditText 
        android:id="@+id/phonenumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:numeric="decimal"
        android:maxLength="11"
        android:textColor="#7fff0f"
        android:textSize="20sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>
  
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:text="@string/sentHint"
         />
    <Button
        android:id="@+id/btn_sent"
        android:background="@drawable/btn_not_hitted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="26sp"
        android:textColor="#ffffff"
        android:layout_gravity="center"           
        android:text="@string/sent" />
   
</LinearLayout>
