<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:clipToPadding="true" 
    android:background="@drawable/menu_bg"
    android:focusable="true"  
    android:focusableInTouchMode="true">
    
  <RelativeLayout 
       android:layout_height="40dp"
       android:layout_width="match_parent"
       >
       <TextView
           android:id="@+id/menu"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_centerHorizontal="true"
           android:layout_centerVertical="true"
           android:text="@string/mine"
           android:textSize="28sp"
           android:textColor="#ffffff" />
        <ImageButton
           android:id="@+id/mine_back"
           android:layout_width="30dp"
           android:layout_height="30dp"
           android:layout_margin="5dp"
           android:layout_alignParentLeft="true"
           android:layout_alignTop="@+id/logintitle"
           android:background="@drawable/back" />    
       </RelativeLayout>

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="0dp" 
    android:layout_weight="3">

    <Button
        android:id="@+id/change_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/change_info" />

    <Button
        android:id="@+id/btn_view_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/view_info" />

    <Button
        android:id="@+id/invitation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/invitation" />

  </RelativeLayout>

  <RelativeLayout 
       android:layout_height="0dp"
       android:layout_width="match_parent"
       android:layout_weight="2"       
       >
   <Button
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/logout" />
  </RelativeLayout>
  </LinearLayout>