<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:clipToPadding="true"
    android:background="@drawable/menu_bg"
    android:focusable="true"  
    android:focusableInTouchMode="true" >
    
    <RelativeLayout 
       android:layout_height="60dp"
       android:layout_width="match_parent"
       >
       <TextView
           android:id="@+id/infotitle"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_centerHorizontal="true"
           android:layout_centerVertical="true"
           android:text="@string/infotitle"
           android:textSize="28sp"
           android:textColor="#ffffff" />

       <ImageButton
           android:id="@+id/info_back"
           android:layout_width="30dp"
           android:layout_height="30dp"
           android:layout_margin="5dp"
           android:layout_alignParentLeft="true"
           android:layout_alignTop="@+id/infotitle"
           android:background="@drawable/back" />

       </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="220dp" >

        <Button
            android:id="@+id/base_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/baseinfo" />

        <Button
            android:id="@+id/travel_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/travelinfo" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/health_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/healthinfo" />

        <Button
            android:id="@+id/consume_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/consumeinfo" />

    </RelativeLayout>

</LinearLayout>
